--- a/animalfrontend/src/index.css
+++ b/animalfrontend/src/index.css
@@ -6,6 +6,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-align: center;
+  background-color: #191825;
+  color: white;
 }
 
 code {
