--- a/animalfrontend/src/components/Dropfile.css
+++ b/animalfrontend/src/components/Dropfile.css
@@ -1,7 +1,7 @@
 .drop-file-input {
     position: relative;
     width: 350px;
-    height: 200px;
+    height: 400px;
     border: 2px dashed var(--border-color);
     border-radius: 20px;
     display: flex;
@@ -39,16 +39,18 @@
     text-align: center;
     color: var(--txt-second-color);
     font-weight: 600;
-    padding: 10px;
+    padding: 20px;
 }
 
 .drop-file-input__label img {
-    width: 100px;
+    width: 150px;
+    padding: 20px;
 }
 
 
 
 .drop-file-preview p {
+    margin: 1em;
     font-weight: 500;
 }
 
