--- a/animalfrontend/src/index.css
+++ b/animalfrontend/src/index.css
@@ -1,14 +1,40 @@
-body {
-  margin: 0;
+/* body, html {
+  margin: 0; */
   /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif; */
-    font-family: 'Inter var', sans-serif;
+    /* font-family: 'Inter var', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-align: center;
   background-color: white;
   color: black;
+  padding: 0;
+	border: 0;
+  display: block;
+} */
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+  font-family: 'Inter var', sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 code {
@@ -19,7 +45,7 @@ code {
 p {
   font-size: 1em;
   font-weight: 300;
-  color: #0247B3;
+  color: #224d4f;
 }
 
 h5 {
@@ -29,7 +55,14 @@ h5 {
 
 h3 {
   font-size: 1.6em;
-  font-weight: 400;
+  font-weight: 600;
+  padding: 1em;
+  margin: 1em 0em;
+  background: linear-gradient(90deg, #224D4F 43.75%, #000B17 100%);
+  color: white;
+  border-radius: 5px;
+  border: #224d4f 1px solid;
+  width: fit-content;
 }
 
 h1 {
