--- a/animalfrontend/src/pages/Landing.css
+++ b/animalfrontend/src/pages/Landing.css
@@ -1,6 +1,9 @@
 .bg-image {
     position: relative;
 }
+body{
+    overflow-x: hidden;
+}
 .img {
     width: 100%;
     height: 100vh;
@@ -43,6 +46,9 @@
     width: 40%;
     text-shadow: 1px 1px black;
 }
+@media (max-width:990px) {
+    
+}
 
 @media screen and (max-width: 768px) {
     .title {
@@ -52,9 +58,61 @@
         color: white;
         padding: 1em;
         border: 0;
-        width: 40%;
+        width: 100%;
         text-shadow: 1px 1px black;
     }
+    .cover {
+        position: absolute;
+        width: 70%;
+        right: 0;
+        top: 0;
+    }
+    .overlay {
+        position: absolute;
+        left: 0;
+        top: 8em;
+        /* text-align: center; */
+    }
+    .title {
+        font-size: 2.5em;
+        font-weight: 700;
+        padding: 1em;
+        color: white;
+        /* line-height: 4rem; */
+        border: 0;
+        width:90%;
+        text-shadow: 1px 1px black;
+    }
+    .para {
+        font-size: 1.2em !important;
+        font-weight: 400;
+        margin: 0em 0em;
+        color: black;
+        padding: 0em !important;
+        border: 0;
+        width: 90% !important;
+        /* text-shadow: 1px 1px black; */
+    }
+    .para1 {
+        font-size: 1.2em !important;
+        font-weight: 400;
+        margin: 0em 0em;
+        color: black;
+        padding: 0em !important;
+        border: 0;
+        width: 90% !important;
+        text-align: left !important;
+        /* text-shadow: 1px 1px black; */
+    }
+    .subtitle {
+        text-align: center;
+        font-size: 2.5em;
+        font-weight: 600;
+        padding: 1em;
+        color: #224d4f;
+        /* text-shadow: 1px 1px black; */
+    }
+    
 }
 
 .subtitle {
@@ -74,6 +132,18 @@
     width: 40%;
     /* text-shadow: 1px 1px black; */
 }
+.para1 {
+    font-size: 1.3em;
+    font-weight: 400;
+    margin: 0em 1em;
+    color: black;
+    padding: 1em;
+    border: 0;
+    width: 80%;
+    text-align: center;
+    /* text-shadow: 1px 1px black; */
+}
+
 
 .center {
     display: flex;
